--- a/loginApp/Base.lproj/Main.storyboard
+++ b/loginApp/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L5q-Xc-Q9s">
                                         <rect key="frame" x="0.0" y="64" width="354" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                 </subviews>
                             </stackView>
@@ -87,6 +87,10 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="dXW-cd-xHt"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="passwordValueTF" destination="L5q-Xc-Q9s" id="jw7-e4-JAA"/>
+                        <outlet property="usernameValueTF" destination="nM3-J2-dAi" id="EUB-mz-sUl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -122,6 +126,7 @@
                                 </state>
                                 <connections>
                                     <action selector="closeScreen" destination="pOF-7G-NGn" eventType="touchUpInside" id="WJx-VS-XMR"/>
+                                    <segue destination="l8P-KS-5Qt" kind="unwind" unwindAction="unwindFor:" id="ZhF-hu-Afz"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -136,8 +141,12 @@
                             <constraint firstItem="9Xy-GA-AH2" firstAttribute="leading" secondItem="s6s-KG-78G" secondAttribute="leading" constant="137" id="oq4-EH-u0k"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="userNameValueLabel" destination="Fj5-Qc-7sk" id="ifD-n1-jeM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9fs-Qe-vkv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="l8P-KS-5Qt" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="3511.6822429906538" y="68.682505399568043"/>
         </scene>
