--- a/loginApp/Base.lproj/Main.storyboard
+++ b/loginApp/Base.lproj/Main.storyboard
@@ -66,6 +66,7 @@
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
+                                    <action selector="logInButtonTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="ygl-xV-dpC"/>
                                     <segue destination="pOF-7G-NGn" kind="presentation" id="g6Q-Yh-el3"/>
                                 </connections>
                             </button>
