--- a/loginApp/Storyboards/Base.lproj/Main.storyboard
+++ b/loginApp/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XA7-qS-ta4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="diK-wi-8ii">
-                                <rect key="frame" x="30" y="218" width="354" height="98"/>
+                                <rect key="frame" x="30" y="174" width="354" height="98"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nM3-J2-dAi">
                                         <rect key="frame" x="0.0" y="0.0" width="354" height="34"/>
@@ -32,7 +32,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="MAi-aJ-WDf">
-                                <rect key="frame" x="30" y="385" width="354" height="28"/>
+                                <rect key="frame" x="30" y="341" width="354" height="28"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Yq-8k-kUI">
                                         <rect key="frame" x="0.0" y="0.0" width="168.66666666666666" height="28"/>
@@ -59,7 +59,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KVd-qG-OLI">
-                                <rect key="frame" x="169.66666666666666" y="346" width="75" height="31"/>
+                                <rect key="frame" x="169.66666666666666" y="302" width="75" height="31"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Log in ">
@@ -67,7 +67,7 @@
                                 </state>
                                 <connections>
                                     <action selector="logInButtonTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="ygl-xV-dpC"/>
-                                    <segue destination="pOF-7G-NGn" kind="presentation" id="g6Q-Yh-el3"/>
+                                    <segue destination="gHz-F2-AQA" kind="presentation" id="g6Q-Yh-el3"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -97,12 +97,12 @@
             </objects>
             <point key="canvasLocation" x="2749.0654205607475" y="68.682505399568043"/>
         </scene>
-        <!--Welcome View Controller-->
+        <!--Home-->
         <scene sceneID="zMh-7O-6eg">
             <objects>
-                <viewController id="pOF-7G-NGn" customClass="WelcomeViewController" customModule="loginApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="pOF-7G-NGn" customClass="WelcomeViewController" customModule="loginApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tcs-ar-TgL">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kKq-cG-KAY">
@@ -113,13 +113,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fj5-Qc-7sk">
-                                <rect key="frame" x="89" y="200" width="236" height="20.666666666666657"/>
+                                <rect key="frame" x="89" y="244" width="236" height="20.666666666666686"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Xy-GA-AH2">
-                                <rect key="frame" x="137" y="658" width="140" height="42"/>
+                                <rect key="frame" x="137" y="663" width="140" height="42"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Log out">
@@ -142,6 +142,8 @@
                             <constraint firstItem="9Xy-GA-AH2" firstAttribute="leading" secondItem="s6s-KG-78G" secondAttribute="leading" constant="137" id="oq4-EH-u0k"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Home" image="house.fill" catalog="system" id="rA0-i2-ybF"/>
+                    <navigationItem key="navigationItem" id="yMB-mn-6Nq"/>
                     <connections>
                         <outlet property="userNameValueLabel" destination="Fj5-Qc-7sk" id="ifD-n1-jeM"/>
                     </connections>
@@ -149,28 +151,78 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9fs-Qe-vkv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="l8P-KS-5Qt" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3511.6822429906538" y="68.682505399568043"/>
+            <point key="canvasLocation" x="4264" y="68"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="nHx-G1-Pee">
+        <!--Tab Bar Controller-->
+        <scene sceneID="eQx-nF-MKL">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XA7-qS-ta4" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="gHz-F2-AQA" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sZm-vS-wGI">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1ul-Uh-4Oq">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="pOF-7G-NGn" kind="relationship" relationship="viewControllers" id="OCc-tm-jWn"/>
+                        <segue destination="6Wx-kg-RWv" kind="relationship" relationship="viewControllers" id="wbc-aA-6vo"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bfw-pt-WIF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3511.594202898551" y="68.303571428571431"/>
+        </scene>
+        <!--Alina Sakovskaya-->
+        <scene sceneID="Hjz-Hd-Q7j">
+            <objects>
+                <viewController id="jXL-Z4-aGL" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="91S-8V-6Y5">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About myself" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mKI-TU-GVw">
+                                <rect key="frame" x="138.33333333333331" y="108.00000000000001" width="137.33333333333331" height="46.666666666666671"/>
+                                <fontDescription key="fontDescription" name="PartyLetPlain" family="Party LET" pointSize="40"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="PhQ-I7-2Uo"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="mKI-TU-GVw" firstAttribute="top" secondItem="PhQ-I7-2Uo" secondAttribute="top" constant="20" id="ICT-tc-qRq"/>
+                            <constraint firstItem="mKI-TU-GVw" firstAttribute="centerX" secondItem="91S-8V-6Y5" secondAttribute="centerX" id="wZt-ig-L2T"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Alina Sakovskaya" id="rYU-yG-8i8"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mWy-WS-w57" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4421.739130434783" y="760.71428571428567"/>
+        </scene>
+        <!--Alina Sakovskaya-->
+        <scene sceneID="QQe-l7-xoX">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6Wx-kg-RWv" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Alina Sakovskaya" image="person.fill" catalog="system" id="JI5-kV-GDT"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0L7-YH-3Vx">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="H6i-S2-UjZ"/>
+                        <segue destination="jXL-Z4-aGL" kind="relationship" relationship="rootViewController" id="n7Z-it-bmP"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1jG-GJ-gGR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MKT-Yb-sfq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1849.0654205607475" y="68.682505399568043"/>
+            <point key="canvasLocation" x="3511.594202898551" y="760.71428571428567"/>
         </scene>
     </scenes>
     <resources>
+        <image name="house.fill" catalog="system" width="128" height="106"/>
+        <image name="person.fill" catalog="system" width="128" height="120"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
